--- a/index.html
+++ b/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+          <a href="/index.html"><img src="img/logo.png" /></a>
+        </ul>
+        <ul>
+          <li><a href="view/edit/edit.html">SELLER</a></li>
+          <li><a href="view/customer/customer.html">CUSTOMER</a></li>
+          <li><a href="views/play/play.html">LOGIN</a></li>
+          <li><a href="views/play/play.html">CARD</a></li>
+        </ul>
+      </nav>
+      <div class="home">
+        <h1><span>Welcome</span> to <span>Online</span> foods</h1>
+      </div>
+      <div class="footer">
+        <div class="help">
+            <h3>Follow Fastfood Page</h3>
+            <a href="https://www.youtube.com/watch?v=npaaFOwfKZk"><img src="img/youtube.png" alt="" width="25%"></a>
+            <a href="https://www.facebook.com/fastfoodonline/"><img src="img/fecebook.png" alt="" width="25%"></a>
+        </div>
+        <div class="help">
+            <h3>Customer service</h3>
+            <a href="">Contact Us</a>
+            <a href="">Register</a>
+        </div>
+        <div class="help">
+            <h3>Useful Information</h3>
+            <a href="">Safety Tip</a>
+            <a href="">Ad Posting Rule</a>
+        </div>
+        <div class="app">
+            <a href="https://play.google.com/store/apps/details?id=com.stamsoft.fastfood&hl=en&gl=US"><img src="img/googleplay.png" alt="" width="70%"></a>
+        </div>
+      </div>
 </body>
 </html>
