[customer and sell]create porduct and to sell

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-          <a href="/index.html"><img src="img/logo.png" /></a>
+          <a href="index.html"><img src="img/logo.png" /></a>
         </ul>
         <ul>
           <li><a href="view/edit/edit.html">SELLER</a></li>
