[all page] fix code and resposive

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <nav>
+    <nav class="nav">
         <ul>
           <a href="index.html"><img src="img/logo.png" /></a>
         </ul>
         <ul>
-          <li><a href="view/edit/edit.html">SELLER</a></li>
+          <li><a href="view/edit/edit.html">PRODUCT</a></li>
           <li><a href="view/customer/customer.html">CUSTOMER</a></li>
-          <li><a href="views/play/play.html">LOGIN</a></li>
-          <li><a href="views/play/play.html">CARD</a></li>
+          <li><a href="view/customer_order/order.html">ORDER</a></li>
         </ul>
-      </nav>
+      </nav><br><br><br><br>
       <div class="home">
         <h1><span>Welcome</span> to <span>Online</span> foods</h1>
       </div>
